<resources>
    <string name="app_name">DriveRater</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_previous_trip">Previous Trip</string>
    <string name="title_trip">Trip</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="start_trip">Start Trip</string>
    <string name="return_string">Return</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="label_previous_score">Previous Trip Score</string>
</resources>