<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.driveapp.driverater.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.driveapp.driverater.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.driveapp.driverater.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
        <argument
            android:name="h"
            app:argType="integer"
            android:defaultValue="5" />
    <fragment
        android:id="@+id/navigation_trip"
        android:name="com.driveapp.driverater.ui.trip.TripFragment"
        android:label="@string/title_trip"
        tools:layout="@layout/fragment_trip"/>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.driveapp.driverater.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>